src/test/ui/typeck/issue-91267.stderr
error[E0412]: cannot find type `e` in this scope
  --> $DIR/issue-91267.rs:2:16
   |
LL |     0: u8<e<5>=e>
   |                ^
   |                |
   |                not found in this scope
   |                help: maybe you meant to write an assignment here: `let e`

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-91267.rs:2:11
   |
LL |     0: u8<e<5>=e>
   |           ^^^^^^ associated type not allowed here

error[E0308]: mismatched types
  --> $DIR/issue-91267.rs:2:5
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     0: u8<e<5>=e>
   |     ^^^^^^^^^^^^^ expected `()`, found `u8`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0229, E0308, E0412.
For more information about an error, try `rustc --explain E0229`.
